# ingot

./: Cargo.toml  Dioxus.toml
assets/: tailwind.css
src/: main.rs
src/data/: battery.rs  mod.rs
