[package]
name = "ingot"
version = "0.1.0"
authors = ["section <alexmas9n@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.2"
battery = "0.7.8"
dioxus = { version = "0.7.1", features = ["router"] }
gloo-timers = "0.3.0"
sysinfo = "0.38.4"
tokio = "1.50.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
